--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
 jdk:
-  - openjdk17
-before_install:
-  - ./scripts/prepareJitpackEnvironment.sh
+  - openjdk11
+install:
+  - ./gradlew clean build publishToMavenLocal
+
